--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 87 -
+[2006/12/28] - RaX - Added the 12/28 client to our packet_db.
+-
+
 - Rev 86 -
 [2006/12/27] - Tsusai - Notes/Overview: More updates to the multi character server coding,
  mainly side effect bugfixes.
