--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,14 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 89 -
+[2006/12/29] - RaX - Added my e-mail address to the helios.dpr header.
+[2006/12/29] - RaX - Moved Database creates and frees around to assign each dynamically
+ based on which servers are enabled.
+[2006/12/29] - RaX - Added new console commands, start and stop. For example, /start login
+ would create and start the login server. /stop login would stop and free the login server.
+-
+
 - Rev 88 -
 [2006/12/28] - Tsusai - Forgot to put back the Account field in the LoadChara in both existing
  database calls.
