--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,18 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 90 -
+[2006/12/30] - RaX - Pretty much redid the database reorganization of the last commit.
+ Moved Databases to be a private entity of each server. Zone is the exception, multiple
+ file rely on the zone's database since we don't want the zone server file to be, well,
+ HUGE =)
+
+	NOTE::: The 12/28 client works, but is quirky. There seems to be some missing
+ 		padding in create character and delete character, because results for each
+		are random. Tsusai, can you sniff the exe and see what's missing? Maybe
+		it'll be a simple feature to add. I'll e-mail it to you par request.
+-
+
 - Rev 89 -
 [2006/12/29] - RaX - Added my e-mail address to the helios.dpr header.
 [2006/12/29] - RaX - Moved Database creates and frees around to assign each dynamically
